[New]: add plugin for interface block

--- a/index.html
+++ b/index.html
@@ -20,12 +20,24 @@
 </div>
 <div id ="div3">
     <p>id = div3</p>
+    <a href="http://htmlbook.ru/example/knob.html">Link 1</a>
+    <button type="button" onclick="alert('Hello world!')">Click Me!</button>
     <hr>
     <br>
     <br>
     <br>
     <br>
     <hr>
+    <div id="div_with_buttons">
+        <p>id = div_with_buttons</p>
+        <button type="button" onclick="alert('Hello world!')">Click Me!</button>
+        <form>
+            <input type="text"/>
+            <input type ="radio"/>
+            <input type = "password"/>
+            <input type = "submit"/>
+        </form>
+    </div>
     <h1>h1-1</h1>
     <h1>h1-2</h1>
     <br>
@@ -84,7 +96,7 @@
     <h3>h3-4</h3>
 </div>
 <script src="./index.js"></script>
-
+<script src="./jquery.interfaceBlock.js"></script>
 
 </body>
 </html>
