[Update]: cleaned code.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 </div>
 <div id ="div3">
     <p>id = div3</p>
-    <a href="http://htmlbook.ru/example/knob.html">Link 1</a>
     <button type="button" onclick="alert('Hello world!')">Click Me!</button>
     <hr>
     <br>
@@ -54,7 +53,7 @@
     <br>
     <br>
     <br>
-    <hr><br>
+    <hr id = "hr1"><br>
     <br>
     <br>
     <br>
@@ -95,8 +94,8 @@
     <h3>h3-3</h3>
     <h3>h3-4</h3>
 </div>
-<script src="./index.js"></script>
-<script src="./jquery.interfaceBlock.js"></script>
+<script src="./inView/inView.js"></script>
+<script src="./plugin-InterfaceBlock/jquery.interfaceBlock.js"></script>
 
 </body>
 </html>
