[Update]: reformatted code.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" type="text/css" href="idStyleForPlugin.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-
 </head>
 <body>
 <div id="div1">
@@ -24,10 +24,11 @@
     <hr>
     <br>
     <br>
-    <br>
-    <br>
-    <hr>
-    <div id="div_with_buttons">
+    <div class = "blockInterface" >
+        <br>
+        <hr>
+    </div>
+    <div id="div_with_buttons" >
         <p>id = div_with_buttons</p>
         <button type="button" onclick="alert('Hello world!')">Click Me!</button>
         <form>
@@ -82,6 +83,7 @@
     <br>
     <br>
     <br>
+    <br>
     <hr><br>
     <br>
     <br>
@@ -96,6 +98,5 @@
 </div>
 <script src="./inView/inView.js"></script>
 <script src="./plugin-InterfaceBlock/jquery.interfaceBlock.js"></script>
-
 </body>
 </html>
